--- a/code/spring-cloud-alibaba-parent/pom.xml
+++ b/code/spring-cloud-alibaba-parent/pom.xml
@@ -15,6 +15,7 @@
         <maven.compiler.target>8</maven.compiler.target>
         <mysql.version>8.0.18</mysql.version>
         <seata.version>1.4.2</seata.version>
+        <mybatis-spring-boot-starter.version>2.2.0</mybatis-spring-boot-starter.version>
         <spring-boot.version>2.2.11.RELEASE</spring-boot.version>
         <spring-cloud.version>Hoxton.SR10</spring-cloud.version>
         <spring-cloud-alibaba.version>2.2.3.RELEASE</spring-cloud-alibaba.version>
@@ -26,6 +27,7 @@
         <module>nacos-discovery-consumer</module>
         <module>nacos-micro-service</module>
         <module>nacos-seata-service</module>
+        <module>nacos-seata-multiple-datasource</module>
     </modules>
 
     <dependencyManagement>
